// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPanelTest render - isPanelOpen = false 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="settingsPanel"
    closebuttonarialabel="Close settings panel"
    hasclosebutton="true"
    headertext="Settings"
    innerpanelautomationid="settings-panel"
    isopen="false"
    layerprops="[object Object]"
  >
    <div
      class="test-settings"
    >
      <div>
        test-settings-1
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-2
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-3
      </div>
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;

exports[`SettingsPanelTest render - isPanelOpen = true 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="settingsPanel"
    closebuttonarialabel="Close settings panel"
    hasclosebutton="true"
    headertext="Settings"
    innerpanelautomationid="settings-panel"
    isopen="true"
    layerprops="[object Object]"
  >
    <div
      class="test-settings"
    >
      <div>
        test-settings-1
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-2
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-3
      </div>
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;

exports[`SettingsPanelTest render - with custom layer class name 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="settingsPanel"
    closebuttonarialabel="Close settings panel"
    hasclosebutton="true"
    headertext="Settings"
    innerpanelautomationid="settings-panel"
    layerprops="[object Object]"
  >
    <div
      class="test-settings"
    >
      <div>
        test-settings-1
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-2
      </div>
    </div>
    <div
      class="test-settings"
    >
      <div>
        test-settings-3
      </div>
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;
